Fix: UTF-8 encoding pentru caractere românești, buton înapoi la blog, eliminare descrieri articole
- Rezolvat problema cu artefactele din text (ă, â, î, ș, ț apar corect)
- Adăugat buton 'Înapoi la Blog' pe toate paginile de articole
- Eliminat descrierile articolelor din pagina blog (doar titlu și imagine)
- Optimizat procesul de update al sitemap-ului pentru a evita update-uri multiple

--- a/css/blog.css
+++ b/css/blog.css
@@ -106,11 +106,12 @@
   font-size: clamp(1.3125rem, 2vw, 1.75rem); /* 21px - 28px */
   line-height: 1.382;
   color: #0D2440;
-  margin-bottom: var(--spacing-sm);
+  margin-bottom: 0;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  flex-grow: 1;
 }
 
 .blog-card-excerpt {
